[package]
name = "pallet-collective"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Collective system: Members of a set of account IDs can make their collective feelings known through dispatched calls from one of two specialized origins."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/mannheim-network/substrate"  }
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/mannheim-network/substrate"  }
sp-io = { version = "3.0.0", default-features = false, git = "https://github.com/mannheim-network/substrate"  }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/mannheim-network/substrate" }
frame-benchmarking = { version = "3.0.0", default-features = false, git = "https://github.com/mannheim-network/substrate" , optional = true }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/mannheim-network/substrate"  }
frame-system = { version = "3.0.0", default-features = false, git = "https://github.com/mannheim-network/substrate"  }
primitives = { package = "cst-primitives", path = "../../primitives", default-features = false }
[dev-dependencies]
hex-literal = "0.3.1"
cstrml-balances = { version = "1.0.0", path = "../balances" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-core/std",
	"sp-std/std",
	"serde",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"frame-system/std",
	"primitives/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
