[package]
name = "cstrml-swork"
version = "1.0.0"
authors = ["mannheim"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://mannheim.network"
repository = "https://github.com/mannheim-network/spacex/"

[dependencies]
# third party dependencies
codec = { default-features = false, package = "parity-scale-codec", version = "2.0.0" }
serde = { optional = true, version = "1.0.116" }
base64 = { default-features = false, features = ["alloc"], version = "0.12.2" }
p256 = { default-features = false, features = ["ecdsa"], version = "0.5.1" }

# substrate frame dependencies
frame-support = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
frame-system = { default-features = false, git = "https://github.com/mannheim-network/substrate" }

# substrate primitives
sp-core = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
sp-io = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
sp-runtime = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
sp-std = { default-features = false, git = "https://github.com/mannheim-network/substrate" }

# Mannheim runtime modules
primitives = { package = "cst-primitives", path = "../../primitives", default-features = false }
webpki = { package = "webpki", path = "../../utils/webpki", default-features = false }
serde_json = { package = "serde_json_no_std", path = "../../utils/serde_json_no_std", default-features = false, features = ["alloc"] }

[dev-dependencies]
keyring = { package = "sp-keyring", git = "https://github.com/mannheim-network/substrate" }
balances = { package = "cstrml-balances", path = "../balances" }
primitives = { package = "cst-primitives", path = "../../primitives", features = ["test"] }
market = { package = "cstrml-market", path = "../market" }
hex = "0.4.2"

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "frame-support/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-system/std",
    "primitives/std",
    "webpki/std"
]