[package]
name = "cstrml-swork-benchmarking"
version = "1.0.0"
authors = ["mannheim"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://mannheim.network"
repository = "https://github.com/mannheim-network/spacex/"

[dependencies]
# third party dependencies
codec = { default-features = false, package = "parity-scale-codec", features = ["derive"], version = "2.0.0" }
serde = { optional = true, version = "1.0.116" }

# substrate frame dependencies
frame-support = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
frame-system = { default-features = false, git = "https://github.com/mannheim-network/substrate" }

# substrate primitives
sp-core = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
sp-io = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
sp-runtime = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
sp-std = { default-features = false, git = "https://github.com/mannheim-network/substrate" }

frame-benchmarking = { git = "https://github.com/mannheim-network/substrate", default-features = false }

# Mannheim runtime modules
primitives = { package = "cst-primitives", path = "../../../primitives", default-features = false }
market = { package = "cstrml-market", path = "../../market", default-features = false }
swork = { package = "cstrml-swork", path = "../../swork", default-features = false }
balances = { package = "cstrml-balances", path = "../../balances", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "frame-support/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-system/std",
    "primitives/std",
    "frame-benchmarking/std",
    "swork/std",
    "market/std",
    "balances/std"
]

[dev-dependencies]
hex = "0.4.2"
keyring = { package = "sp-keyring", git = "https://github.com/mannheim-network/substrate" }
primitives = { package = "cst-primitives", path = "../../../primitives", features = ["test"] }
